syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService {
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
	rpc CreateDiscount (CreateDiscountRequest) returns (CreateResponce);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (UpdateResponce);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteResponce);
}

message GetDiscountRequest {
	string productName = 1;
}

message CouponModel {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message CreateDiscountRequest {
	CouponModel coupon = 1;
}

message CreateResponce {
	bool success = 1;
}

message UpdateDiscountRequest {
	CouponModel coupon = 1;
}

message UpdateResponce {
	bool success = 1;
}

message DeleteDiscountRequest {
	string productName = 1;
}

message DeleteResponce {
	bool success = 1;
}